[project]
name = "tmdbsimple"
version = "2.9.2"
description = "A Python wrapper for The Movie Database API v3"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Celia Oakley", email = "celia.oakley@alumni.stanford.edu"}
]
keywords = ["movie", "the movie database", "movie database", "tmdb", "wrapper", "database", "themoviedb", "moviedb", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/celiao/tmdbsimple"
Repository = "https://github.com/celiao/tmdbsimple"
Download = "https://github.com/celiao/tmdbsimple/tarball/2.9.2"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"