[project]
name = "tmdb-client-py"
version = "1.0.0"
description = "A Python wrapper for The Movie Database API v3"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Anh-Dung Nguyen", email = "nguu0123@proton.me" }]
keywords = [
  "movie",
  "the movie database",
  "movie database",
  "tmdb",
  "wrapper",
  "database",
  "themoviedb",
  "moviedb",
  "api",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/nguu0123/tmdb-client-py"
Repository = "https://github.com/nguu0123/tmdb-client-py"

[project.optional-dependencies]
dev = ["pytest-cov", "pytest", "codecov", "ruff"]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
